--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
 <li><a href="articles/2021/ColorsWorld_12月1日_互动Talkshow _ 观后感--艾滋仍在.html">12月1日_互动Talkshow _ 观后感--艾滋仍在</a></li>
 <li><a href="articles/2021/ColorsWorld_2021-12-02 21_故事 _ 醒来--中关村大学生txl情史.html">12-02 故事 _ 醒来--中关村大学生txl情史</a></li>
 <li><a href="articles/2021/ColorsWorld_2021-12-03 21_意识工坊 _ 《喜宴》观影沙龙.html">12-03 意识工坊 _ 《喜宴》观影沙龙</a></li>
-<li><a href="articles/2021/ColorsWorld_2021-12-04 21_隐蔽派对Vol.09 _ 妈，我是同性恋.html">04 隐蔽派对Vol.09 _ 妈，我是同性恋</a></li>
-<li><a href="articles/2021/ColorsWorld_2021-12-06 21_必备手册 _ 2021多元性别新生指南.html">06 必备手册 _ 2021多元性别新生指南</a></li>
+<li><a href="articles/2021/ColorsWorld_2021-12-04 21_隐蔽派对Vol.09 _ 妈，我是同性恋.html">12-04 隐蔽派对Vol.09 _ 妈，我是同性恋</a></li>
+<li><a href="articles/2021/ColorsWorld_2021-12-06 21_必备手册 _ 2021多元性别新生指南.html">12-06 必备手册 _ 2021多元性别新生指南</a></li>
 <li><a href="articles/2021/ColorsWorld_2021-12-07 21_翻译 _ “糖恋”：“糖爹”和“糖宝”的世界.html">12-07 翻译 _ “糖恋”：“糖爹”和“糖宝”的世界</a></li>
 <li><a href="articles/2021/ColorsWorld_2021-12-08 21_社交智库 _ “你是我抵御凛冬的温暖” 一周CP活动回顾.html">12-08 社交智库 _ “你是我抵御凛冬的温暖” 一周CP活动回顾</a></li>
 
