--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
 	  
 		<h1>ColorsWorld Archive</h1>
 
+		<h3>2022</h3>
+		<ul>
+<li><a href="articles/2022/ColorsWorld_2022-01-03 12_ColorsWorld_2022-01-03 12_ColorsWorld_2022-01-03 12_ColorsWorld_2022-01-03 12_议题讨论招募 _《逃离》--出走的娜拉，只能堕落或回来吗？.html">01-03 12_议题讨论招募 _《逃离》--出走的娜拉，只能堕落或回来吗？</a></li>
+<li><a href="articles/2022/ColorsWorld_2022-01-04 21_ColorsWorld_2022-01-04 21_ColorsWorld_2022-01-04 21_ColorsWorld_2022-01-04 21_翻译 _ 肖邦是Gay？.html">01-04 21_翻译 _ 肖邦是Gay？</a></li>
+<li><a href="articles/2022/ColorsWorld_2022-01-05 21_ColorsWorld_2022-01-05 21_ColorsWorld_2022-01-05 21_ColorsWorld_2022-01-05 21_讨论笔记｜霸凌与自救，你可以做你自己的光.html">01-05 21_讨论笔记｜霸凌与自救，你可以做你自己的光</a></li>
+<li><a href="articles/2022/ColorsWorld_2022-01-07 21_ColorsWorld_2022-01-07 21_ColorsWorld_2022-01-07 21_ColorsWorld_2022-01-07 21_重温 _ 恐同即深柜？.html">01-07 21_重温 _ 恐同即深柜？</a></li>
+<li><a href="articles/2022/ColorsWorld_2022-01-08 21_ColorsWorld_2022-01-08 21_ColorsWorld_2022-01-08 21_ColorsWorld_2022-01-08 21_隐蔽派对Vol.11 _ 错过了落日余晖，但可以期待满天星辰.html">01-08 21_隐蔽派对Vol.11 _ 错过了落日余晖，但可以期待满天星辰</a></li>
+<li><a href="articles/2022/ColorsWorld_2022-01-09 21_ColorsWorld_2022-01-09 21_ColorsWorld_2022-01-09 21_ColorsWorld_2022-01-09 21_故事 _ 春天也开始了.html">01-09 21_故事 _ 春天也开始了</a></li>
+
+		</ul>
+
 		<h3>2021</h3>
 		<ul>
 <li><a href="articles/2021/ColorsWorld_-2021-01-01-意识工坊-《女孩》观影沙龙.html">意识工坊-《女孩》观影沙龙</a></li>
@@ -113,7 +124,7 @@
 <li><a href="articles/2021/ColorsWorld_2021-12-25 21_翻译丨欧洲婚姻平等：漫长而来之不易的历程.html">12-25 21_翻译丨欧洲婚姻平等：漫长而来之不易的历程</a></li>
 <li><a href="articles/2021/ColorsWorld_2021-12-26 21_杂谈 _ 郭敬明写网文的话，会梦到priest吗？.html">12-26 21_杂谈 _ 郭敬明写网文的话，会梦到priest吗？</a></li>
 <li><a href="articles/2021/ColorsWorld_2021-12-28 20_周边征订 _ Love Gives Birth To Queer.html">12-28 20_周边征订 _ Love Gives Birth To Queer</a></li>
-
+<li><a href="articles/2021/ColorsWorld_2021-12-31 18_故事 _ 自由即自我，自我即自由.html">12-31 18_故事 _ 自由即自我，自我即自由</a></li>
 		</ul>
 
 		<h3>2020</h3>
