--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
 <li><a href="articles/2022/ColorsWorld_2022-03-30 21_原创研究 _ 2022年关于跨性别者的社会态度调查报告.html">03-30 21_原创研究 _ 2022年关于跨性别者社会态度调查报告</a></li>
 <li><a href="articles/2022/ColorsWorld_2022-03-31 21_现身日，听到来自CW的跨性别伙伴们的声音.html">03-31 21_现身日，听到来自CW的跨性别伙伴们的声音a></li>
 <li><a href="articles/2022/ColorsWorld_2022-04-01 21_翻译 _ “暴力泛滥成灾”：针对跨性别和非常规性别人士的暴力.html">04-01 21_翻译 _ “暴力泛滥成灾针对跨性别和非常规性别人士的暴力</a></li>
+<li><a href="articles/2022/ColorsWorld_2022-04-02 21_四月，祝你尽享春光，愿我们被温柔以待.html">04-02 21_四月，祝你尽享春光，愿我们被温柔以待</a></li>
+<li><a href="articles/2022/ColorsWorld_2022-04-06 21_合集 _ 国际无性恋日：CW无性恋相关推送整理.html">04-06 21_合集 _ 国际无性恋日：CW无性恋相关推送整理</a></li>
+<li><a href="articles/2022/ColorsWorld_2022-04-13 21_讨论笔记 _ 无处不在的强暴迷思.html">04-13 21_讨论笔记 _ 无处不在的强暴迷思</a></li>
 
 		</ul>
 
